# support-agent-platform

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  API_CONTRACT_V1.md  API_CONTRACT_V2.md  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  Dockerfile  EVAL.md  Makefile  PROJECT_SCOPE.md  README.md  RELEASE_NOTES.md  RUNBOOK.md  TODO.md  UPGRADE3_FINAL.md  ai伴侣项目书原版.md  docker-compose.yml  opencode.json  pyproject.toml  升级1.md  升级2-任务分解与执行清单-A1-H4.md  升级2-实施要求与验收测试规范.md  升级2.md  升级3-任务分解与执行清单-A1-D4.md  升级3-实施要求与验收测试规范.md  升级3.md  升级4.md  升级5-1.md  升级5-2.md  升级5-3.md  升级5-Codex安全升级投喂顺序.md  升级5-任务分解与执行清单-S1-S4.md  升级5-可行性与适配评估.md  升级5-实施要求与验收测试规范.md  升级5.md  升级6.backup.20260319.md  (+3 more)
.beads/: issues.jsonl
artifacts/: system_dispatch_validation.json  upgrade6_acceptance_report.md
channel_adapters/: __init__.py  base.py
config/: __init__.py  secrets.py  settings.py
core/: __init__.py  disambiguation.py  handoff_manager.py  intent_router.py  model_adapter.py  priority_detector.py  priority_llm_detector.py  recommended_actions_engine.py  reply_generator.py  reply_orchestration.py  retriever.py  sla_engine.py  summary_engine.py  ticket_api.py  tool_router.py  trace_logger.py  workflow_engine.py
docs/: kb-external-data-ingestion.md  project-review-refactor-plan.md  upgrade5-agents-ops-dispatch.md  upgrade5-closure-report.md  upgrade5-closure-tracker.md  upgrade5-console-ui.md  upgrade5-frontend-manual-reply-full.md  upgrade5-migration-note.md  upgrade5-runtime.md  upgrade5-wecom-dispatch.md  upgrade5-workflow1.md
llm/: __init__.py  manager.py  openai_compatible_client.py  types.py
openclaw_adapter/: bindings.py  channel_router.py  gateway.py  inbound_handler.py  outbound_sender.py  replay_guard.py  retry_manager.py  session_mapper.py  signature_validator.py
runtime/: __init__.py
scripts/: deploy_release.py  dev_reloader.py  gateway_status.py  healthcheck.py  import_external_kb_seed.py  ops_api_server.py  release_state.py  replay_gateway_event.py  replay_system_corpus.py  replay_wecom_dispatch_bridge.py  replay_wecom_lifecycle_matrix.py  rollback_release.py  run_acceptance.py  trace_debug.py  trace_kpi.py  validate_structure.py  verify_release.py  wecom_bridge_server.py
seed_data/: external_sources_manifest.json
storage/: models.py  ops_api_kb.backup.20260319_001425.json  ops_api_kb.json  systems_repository.py  ticket_repository.py
support-agent-platform/: .env.example  EVAL.md  ROADMAP.md  RUNBOOK.md
tools/: __init__.py  assign_ticket.py  create_asset.py  create_crm.py  create_finance.py  create_hr.py  create_procurement.py  create_supply_chain.py  create_ticket.py  escalate_case.py  search_kb.py  system_command_router.py  (+1 more)
(+382 files in other folders)
